first carousel build

--- a/public/styles.css
+++ b/public/styles.css
@@ -18,3 +18,15 @@ background-size: cover;
     text-align: right;
     padding-right: 2%;
 }
+
+.expand-more-icon {
+  margin: auto;
+  width: auto;
+  text-align: center;
+}
+
+.hero-letsrock {
+  margin-top: -16%;
+  width: 30%;
+  transform: rotate(340deg)
+}
