--- a/public/styles.css
+++ b/public/styles.css
@@ -1,23 +1,32 @@
+/*
+FONTS
+font-family: 'Alfa Slab One', cursive;
+font-family: 'Alumni Sans Collegiate One', sans-serif;
+font-family: 'Bebas Neue', cursive;
+font-family: 'Diplomata SC', cursive;
+font-family: 'Emblema One', cursive;
+font-family: 'Keania One', cursive;
+*/
+
 body {
 background-image: url('https://i.imgur.com/fcDFEEC.jpg');
 background-size: cover;
 }
 
 .hero-h1-1 {
-  font-family: 'Black Ops One', cursive;
-  color: whitesmoke;
-  font-size: 800%;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 1000%;
   text-align: left;
-  padding-left: 2%;
+  padding-left: 15%;
+  color: whitesmoke;
 }
 
 .hero-h1-2 {
-    font-family: 'Black Ops One', cursive;
-    color: whitesmoke;
-    font-size: 800%;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 1000%;
     text-align: right;
-    padding-right: 2%;
-    margin-top: -4%;
+    padding-right: 15%;
+    color: whitesmoke;
 }
 
 .expand-more-icon {
@@ -27,11 +36,23 @@ background-size: cover;
 }
 
 .hero-letsrock {
-  margin-top: -10%;
+  margin-top: -20%;
+  margin-left: 5%;
   width: 30%;
-  transform: rotate(340deg)
+  transform: rotate(20deg);
+  z-index: -1
 }
 
+.hero-slash {
+  position: flex;
+  border-top: -300px;
+  margin-top: -300px;
+  margin-top: -300px;
+  margin-left: 50%;
+  width: 30%;
+  transform: rotate(-40deg);
+  z-index: -1
+}
 
 .carousel-round-img {
   padding-top: 3%;
@@ -55,10 +76,15 @@ background-size: cover;
   padding-top: 5%;
   align-content: center;
   text-align: center;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
-.carousel-product-img {
+.product-img {
   width: 40%;
+}
+
+.product-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
 }
