vs placeholder img, tournament placeholder, products img animation

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,10 @@ background-image: url('https://i.imgur.com/fcDFEEC.jpg');
 background-size: cover;
 }
 
+.hero-text-div {
+  position: relative;
+}
+
 .hero-h1-1 {
   font-family: 'Bebas Neue', cursive;
   font-size: 1000%;
@@ -36,22 +40,21 @@ background-size: cover;
 }
 
 .hero-letsrock {
-  margin-top: -20%;
-  margin-left: 5%;
+  position: absolute;
+  top: 10%;
+  right: 10%;
   width: 30%;
   transform: rotate(20deg);
-  z-index: -1
+  z-index: -999;
 }
 
 .hero-slash {
-  position: flex;
-  border-top: -300px;
-  margin-top: -300px;
-  margin-top: -300px;
-  margin-left: 50%;
+  position: absolute;
+  bottom: 1%;
+
   width: 30%;
-  transform: rotate(-40deg);
-  z-index: -1
+  transform: rotate(-20deg);
+  z-index: -999;
 }
 
 .carousel-round-img {
@@ -69,15 +72,17 @@ background-size: cover;
   align-content: center;
   text-align: center;
   color: aliceblue;
-  font-size: larger;
+  font-size: 120%;
 }
 
 .products-carousel-div{
   padding-top: 5%;
-  align-content: center;
+  position: relative;
   text-align: center;
   padding-left: 20%;
   padding-right: 20%;
+  padding-bottom: 8%;
+  overflow:hidden
 }
 
 .product-img {
@@ -87,4 +92,27 @@ background-size: cover;
 .product-text {
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
+}
+
+.ino-img {
+  width: 40%;
+  position: absolute;
+  top: 3%;
+  right: -7%;
+}
+
+.vs-img {
+  width: 100%;
+  padding-left: -50;
+  border-left: -50;
+  margin-left: -50;
+}
+
+.tournament-div {
+  padding: 10%;
+}
+
+.tournament-img {
+  width: 100%;
+  border: solid;
 }
